--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="@string/maintain_shoes"
+            android:text="@string/choose_shoes"
             android:textSize="21sp"
             android:textStyle="bold"
             android:textColor="#212121"/>
