--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -60,7 +61,6 @@
                 android:alpha="0.7"
                 android:background="@drawable/buttonstyles"/>
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/line3"
             android:layout_width="match_parent"
@@ -88,10 +88,11 @@
         </LinearLayout>
         <LinearLayout
             android:id="@+id/line4"
-
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp">
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -111,12 +112,11 @@
                 android:background="@drawable/buttonstyles"/>
         </LinearLayout>
         <LinearLayout
-        android:id="@+id/line5"
+            android:id="@+id/line5"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp">
+            android:paddingTop="8dp">
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
