--- a/app/src/main/res/layout/activity_about_apps.xml
+++ b/app/src/main/res/layout/activity_about_apps.xml
@@ -106,9 +106,11 @@
             android:padding="8dp"
             android:text="@string/contact_author_title"
             android:textSize="17sp"/>
-        <TextView
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/contact_author_content"/>
+            android:text="@string/contact_me_content"
+            android:onClick="contactMe"
+            android:background="@drawable/buttonstyles"/>
     </LinearLayout>
 </ScrollView>
