--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:scrollbars="vertical"
     android:fadingEdge="vertical"
-    tools:context="cn.studyjams.s1.sj26.huangyiming.AboutActivity">
+    tools:context="cn.studyjams.s1.sj26.ShoesTip.AboutActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
