--- a/app/src/main/res/layout/activity_maintain.xml
+++ b/app/src/main/res/layout/activity_maintain.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:scrollbars="vertical"
     android:fadingEdge="vertical"
-    tools:context="cn.studyjams.s1.sj26.huangyiming.QualifyActivity">
+    tools:context="cn.studyjams.s1.sj26.ShoesTip.QualifyActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
